RichwoodNew/src/objects/ProntoForm_Test__c.object
<CustomObject>
    <fields>
        <fullName>Answer_10__c</fullName>
        <label>Answer #10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_11__c</fullName>
        <label>Answer #11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_12__c</fullName>
        <label>Answer #12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Asset</label>
        <referenceTo>Customer_Asset__c</referenceTo>
        <relationshipLabel>ProntoForm Tests</relationshipLabel>
        <relationshipName>ProntoForm_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Form_Submission_Date_Time__c</fullName>
        <label>Form Submission Date/Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Submitted_By__c</fullName>
        <label>Form Submitted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_10__c</fullName>
        <label>Question #10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_11__c</fullName>
        <label>Question #11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_12__c</fullName>
        <label>Question #12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ProntoForm Test</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Form_Submitted_By__c</columns>
        <columns>Form_Submission_Date_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ProntoForm Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProntoForm Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>